# TNT_Script

./: 3tnt.sh  CITATION.cff  CMakeLists.txt  LICENSE  README  README.md  README.zh.md  citation.bib  guoyi.run  runwincladtree.run  setk.run  setk_tnt.run  stats.run  tnt.run  tnt2winclada.cpp  winclada.run
src_tnt2figtree/: CMakeLists.txt  README.md  tnt2figtree.cpp
src_tnt2winclada/: CMakeLists.txt  README.md  tnt2winclada.cpp
